# zabbix-module-systemd

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  Vagrantfile  autogen.sh  bench.keys  configure.ac  libzbxsystemd.spec  zabbix-module-systemd.spec
conf/: libzbxsystemd.conf
m4/: ax_check_zabbix.m4
selinux/: Makefile.am  libzbxsystemd.te  zabbix_agent.te
src/: Makefile.am  dbus.c  libzbxsystemd.c  libzbxsystemd.h  sb.c  systemd.c
src/modules/systemd/: Makefile.am  cgroups.c  dbus.c  libzbxcgroups.c  libzbxcgroups.h  libzbxsystemd.c  libzbxsystemd.h  sb.c  sb.h  systemd.c
templates/: Template App systemd services.xml
